# volumecontrol

./: .gitignore  .release-plz.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-linux.yml  ci-macos.yml  ci.yml  macos.yml  quality.yml  release-napi.yml  release-plz-checks.yml  release-plz.yml  windows.yml
volumecontrol/: CHANGELOG.md  Cargo.toml
volumecontrol-core/: CHANGELOG.md  Cargo.toml  README.md
volumecontrol-core/src/: device_info.rs  error.rs  lib.rs  structs.rs  traits.rs
volumecontrol-linux/: CHANGELOG.md  Cargo.toml  README.md
volumecontrol-linux/src/: lib.rs  pulse.rs
volumecontrol-macos/: CHANGELOG.md  Cargo.toml  README.md
volumecontrol-macos/src/: internal.rs  lib.rs
volumecontrol-napi/: .npmignore  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
volumecontrol-napi/__test__/: index.spec.ts
volumecontrol-napi/src/: lib.rs
volumecontrol-windows/: CHANGELOG.md  Cargo.toml  README.md
volumecontrol-windows/src/: internal.rs  lib.rs
volumecontrol/src/: lib.rs
