[workspace]
members = [
    "volumecontrol-core",
    "volumecontrol-linux",
    "volumecontrol-windows",
    "volumecontrol-macos",
    "volumecontrol",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/touchifyapp/volumecontrol"
homepage = "https://github.com/touchifyapp/volumecontrol"
authors = ["SomaticIT <github@somatic.it>"]
rust-version = "1.85.0"

[workspace.dependencies]
volumecontrol-core = { path = "volumecontrol-core", version = "0.1.1" }
thiserror = "2.0"

# ── cross cross-compilation configuration ────────────────────────────────────
#
# Each target section tells `cross` to install the PulseAudio and ALSA
# development libraries before building.  `libasound2-dev` is a transitive
# build requirement of `libpulse-dev` on Debian/Ubuntu.
#
# A `<rust-target-triple>-pkg-config` wrapper is also created for every target.
# The `pkg-config` Rust crate looks for this wrapper when cross-compiling;
# without it the crate falls back to the host's `pkg-config` and never emits
# `cargo:rustc-link-search`, causing the linker (or even `cargo check`) to fail
# because `libpulse-sys`'s build script cannot find `libpulse.pc`.
#
# GNU targets: libpulse-dev is installed for the target architecture via dpkg
# multi-arch; the wrapper points at the target-arch pkgconfig directory.
#
# musl targets: PulseAudio's shared library is glibc-linked and cannot be
# dynamically linked into musl binaries, so we only `cross check` those targets.
# However, `cargo check` still runs build scripts, so we install the glibc
# libpulse-dev (same arch) to satisfy `libpulse-sys`'s build script.
#
# See https://github.com/cross-rs/cross/blob/main/docs/custom_images.md

# ── GNU targets (check + build, with and without the pulseaudio feature) ─────

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libpulse-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
    "echo '#!/bin/sh' > /usr/local/bin/aarch64-unknown-linux-gnu-pkg-config",
    "echo 'PKG_CONFIG_LIBDIR=/usr/lib/aarch64-linux-gnu/pkgconfig PKG_CONFIG_ALLOW_CROSS=1 exec pkg-config \"$@\"' >> /usr/local/bin/aarch64-unknown-linux-gnu-pkg-config",
    "chmod +x /usr/local/bin/aarch64-unknown-linux-gnu-pkg-config",
]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libpulse-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
    "echo '#!/bin/sh' > /usr/local/bin/armv7-unknown-linux-gnueabihf-pkg-config",
    "echo 'PKG_CONFIG_LIBDIR=/usr/lib/arm-linux-gnueabihf/pkgconfig PKG_CONFIG_ALLOW_CROSS=1 exec pkg-config \"$@\"' >> /usr/local/bin/armv7-unknown-linux-gnueabihf-pkg-config",
    "chmod +x /usr/local/bin/armv7-unknown-linux-gnueabihf-pkg-config",
]

# ── musl targets (check only, with and without the pulseaudio feature) ────────
#
# libpulse-dev is installed for the matching glibc arch so that `libpulse-sys`'s
# build script (pkg-config) can find `libpulse.pc` during `cargo check`.
# No actual linking against libpulse happens on musl.

[workspace.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = [
    # No dpkg --add-architecture needed: the container is already amd64.
    "apt-get update && apt-get --assume-yes install libpulse-dev libasound2-dev",
    "echo '#!/bin/sh' > /usr/local/bin/x86_64-unknown-linux-musl-pkg-config",
    "echo 'PKG_CONFIG_LIBDIR=/usr/lib/x86_64-linux-gnu/pkgconfig PKG_CONFIG_ALLOW_CROSS=1 exec pkg-config \"$@\"' >> /usr/local/bin/x86_64-unknown-linux-musl-pkg-config",
    "chmod +x /usr/local/bin/x86_64-unknown-linux-musl-pkg-config",
]

[workspace.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libpulse-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
    "echo '#!/bin/sh' > /usr/local/bin/aarch64-unknown-linux-musl-pkg-config",
    "echo 'PKG_CONFIG_LIBDIR=/usr/lib/aarch64-linux-gnu/pkgconfig PKG_CONFIG_ALLOW_CROSS=1 exec pkg-config \"$@\"' >> /usr/local/bin/aarch64-unknown-linux-musl-pkg-config",
    "chmod +x /usr/local/bin/aarch64-unknown-linux-musl-pkg-config",
]

[workspace.metadata.cross.target.armv7-unknown-linux-musleabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libpulse-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
    "echo '#!/bin/sh' > /usr/local/bin/armv7-unknown-linux-musleabihf-pkg-config",
    "echo 'PKG_CONFIG_LIBDIR=/usr/lib/arm-linux-gnueabihf/pkgconfig PKG_CONFIG_ALLOW_CROSS=1 exec pkg-config \"$@\"' >> /usr/local/bin/armv7-unknown-linux-musleabihf-pkg-config",
    "chmod +x /usr/local/bin/armv7-unknown-linux-musleabihf-pkg-config",
]
