[workspace]
members = [
    "volumecontrol-core",
    "volumecontrol-linux",
    "volumecontrol-windows",
    "volumecontrol-macos",
    "volumecontrol",
    "volumecontrol-napi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/touchifyapp/volumecontrol"
homepage = "https://github.com/touchifyapp/volumecontrol"
authors = ["SomaticIT <github@somatic.it>"]
rust-version = "1.88.0"