[package]
name = "volumecontrol-core"
description = "Common traits, errors and utilities for volumecontrol crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/volumecontrol-core"
readme = "README.md"
keywords = ["audio", "volume", "multimedia"]
categories = ["multimedia::audio", "os"]

[dependencies]
thiserror = { workspace = true }
