[package]
name = "volumecontrol-macos"
description = "macOS (CoreAudio) volume control bindings for volumecontrol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
volumecontrol-core = { workspace = true }

# Enabled by the `coreaudio` feature; only meaningful when targeting macOS.
[dependencies.objc2-core-audio]
version = "0.3"
optional = true
default-features = false
features = ["std", "AudioHardware"]

[dependencies.objc2-core-foundation]
version = "0.3"
optional = true
default-features = false
features = ["std", "CFString"]

[features]
# Enable real CoreAudio integration. Only useful when building for macOS.
coreaudio = ["dep:objc2-core-audio", "dep:objc2-core-foundation"]
