[package]
name = "volumecontrol-macos"
description = "macOS (CoreAudio) volume control bindings for volumecontrol"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/volumecontrol-macos"
readme = "README.md"
keywords = ["audio", "volume", "coreaudio", "macos"]
categories = ["multimedia::audio", "os"]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin"]
all-features = false
features = []

[dependencies]
volumecontrol-core = { path = "../volumecontrol-core", version = "0.1.1" }

# Enabled by the `coreaudio` feature; only meaningful when targeting macOS.
[dependencies.objc2-core-audio]
version = "0.3"
optional = true
default-features = false
features = ["std", "AudioHardware"]

[dependencies.objc2-core-foundation]
version = "0.3"
optional = true
default-features = false
features = ["std", "CFString"]

[features]
# Enable real CoreAudio integration. Only useful when building for macOS.
coreaudio = ["dep:objc2-core-audio", "dep:objc2-core-foundation"]
