[package]
name = "volumecontrol-napi"
description = "Node.js bindings for volumecontrol via napi-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
volumecontrol = { path = "../volumecontrol" }
volumecontrol-core = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
