[package]
name = "volumecontrol-napi"
description = "Node.js bindings for volumecontrol via napi-rs"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
volumecontrol = { path = "../volumecontrol", version = "0.1.4" }
volumecontrol-core = { path = "../volumecontrol-core", version = "0.1.2" }
napi = { version = "3", features = ["napi9"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
