[package]
name = "volumecontrol-windows"
description = "Windows (WASAPI) volume control bindings for volumecontrol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/volumecontrol-windows"
readme = "README.md"
keywords = ["audio", "volume", "wasapi", "windows"]
categories = ["multimedia::audio", "os"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
all-features = true

[dependencies]
volumecontrol-core = { workspace = true }
thiserror = { workspace = true }

# Enabled by the `wasapi` feature; only meaningful when targeting Windows.
[dependencies.windows]
version = "0.62"
optional = true
features = [
    # PKEY_Device_FriendlyName constant
    "Win32_Devices_FunctionDiscovery",
    # PROPERTYKEY, STGM_READ
    "Win32_Foundation",
    # IMMDevice, IMMDeviceEnumerator, IMMDeviceCollection, MMDeviceEnumerator,
    # eConsole, eRender, DEVICE_STATE_ACTIVE
    "Win32_Media_Audio",
    # IAudioEndpointVolume
    "Win32_Media_Audio_Endpoints",
    # CoInitializeEx, CoUninitialize, CoCreateInstance, CoTaskMemFree, CLSCTX,
    # COINIT, STGM
    "Win32_System_Com",
    # PROPVARIANT (needed for IMMDevice::Activate and IPropertyStore::GetValue)
    "Win32_System_Com_StructuredStorage",
    # PropVariantToStringAlloc, and enables PROPVARIANT methods
    "Win32_System_Variant",
    # IPropertyStore
    "Win32_UI_Shell_PropertiesSystem",
]

[features]
# Enable real WASAPI integration. Only useful when building for Windows.
wasapi = ["dep:windows"]
