[package]
name = "volumecontrol"
description = "Cross-platform crate to control system audio volume"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enable real PulseAudio integration on Linux.
# Requires `libpulse-dev` to be installed on the build host.
pulseaudio = ["volumecontrol-linux/pulseaudio"]

# Enable real WASAPI integration on Windows.
wasapi = ["volumecontrol-windows/wasapi"]

# Enable real CoreAudio integration on macOS.
coreaudio = ["volumecontrol-macos/coreaudio"]

[dependencies]
volumecontrol-core = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
volumecontrol-linux = { path = "../volumecontrol-linux" }

[target.'cfg(target_os = "windows")'.dependencies]
volumecontrol-windows = { path = "../volumecontrol-windows" }

[target.'cfg(target_os = "macos")'.dependencies]
volumecontrol-macos = { path = "../volumecontrol-macos" }
