[package]
name = "volumecontrol"
description = "Cross-platform crate to control system audio volume"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/volumecontrol"
readme = "../README.md"
keywords = ["audio", "volume", "pulseaudio", "wasapi", "coreaudio"]
categories = ["multimedia::audio", "os"]

[dependencies]
volumecontrol-core = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
volumecontrol-linux = { path = "../volumecontrol-linux", features = [
    "pulseaudio",
] }

[target.'cfg(target_os = "windows")'.dependencies]
volumecontrol-windows = { path = "../volumecontrol-windows", features = [
    "wasapi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
volumecontrol-macos = { path = "../volumecontrol-macos", features = [
    "coreaudio",
] }
