[package]
name = "volumecontrol"
description = "Cross-platform crate to control system audio volume"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/volumecontrol"
readme = "../README.md"
keywords = ["audio", "volume", "pulseaudio", "wasapi", "coreaudio"]
categories = ["multimedia::audio", "os"]

[dependencies]
volumecontrol-core = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
volumecontrol-linux = { path = "../volumecontrol-linux", version = "0.1.1", features = [
    "pulseaudio",
] }

[target.'cfg(target_os = "windows")'.dependencies]
volumecontrol-windows = { path = "../volumecontrol-windows", version = "0.1.1", features = [
    "wasapi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
volumecontrol-macos = { path = "../volumecontrol-macos", version = "0.1.1", features = [
    "coreaudio",
] }
